made adjustments to webpack output directory and building bundles

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently -n 'webpack,server' -c 'bgBlue.bold,bgGreen.bold' \"npx webpack serve --config webpack.dev.js\" \"nodemon server/server.js\"",
-    "start": "concurrently -n 'webpack,server' -c 'bgBlue.bold,bgGreen.bold' \"npx webpack serve --config webpack.prod.js\" \"nodemon server/server.js\""
+    "dev": "concurrently -n 'webpack,server' -c 'bgBlue.bold,bgGreen.bold' \"webpack --config webpack.dev.js && npx webpack serve --config webpack.dev.js\" \"nodemon server/server.js\"",
+    "start": "concurrently -n 'webpack,server' -c 'bgBlue.bold,bgGreen.bold' \"webpack --config webpack.prod.js && npx webpack serve --config webpack.prod.js\" \"nodemon server/server.js\""
   },
   "repository": {
     "type": "git",
